examples/test/testpolicy7256.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7256
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key35: value3
      key10: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value13
          key8: value24
          key39: value35
      podSelector:
        matchLabels:
          key12: value38
          key27: value22
          key31: value35
